--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,7 @@ h1 {
 } */
 
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  --site-font: 'Libertinus Keyboard', system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
@@ -74,17 +74,17 @@ html {
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+    font-family: var(--site-font);
+    margin: 0;
+    min-width: 320px;
+    min-height: 100vh;
+
 }
 
-/* Global background that affects the whole page */
 body {
-  background-image: url('./assets/background3.jpg');
-  background-attachment: fixed;
-  background-size: cover;
-  background-position: center;
+    background-image: url('./assets/background5.jpg');
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
+    /* remove display:flex and place-items:center (these caused the narrow column) */
 }
