--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,7 @@ h1 {
 } */
 
 :root {
-  --site-font: 'Libertinus Keyboard', system-ui, Avenir, Helvetica, Arial, sans-serif;
+  --site-font: monospace, 'Space Mono', monospace, 'Liberation Mono', 'Courier New', Courier, monospace;
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
@@ -74,7 +74,6 @@ html {
 }
 
 body {
-    font-family: var(--site-font);
     margin: 0;
     min-width: 320px;
     min-height: 100vh;
@@ -82,7 +81,7 @@ body {
 }
 
 body {
-    background-image: url('./assets/background5.jpg');
+    background-image: url('./assets/background3.jpg');
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
